--- a/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
@@ -28,14 +28,7 @@
 	--kite9-connection-align: 50%;
 }
 
-[k9-elem=textarea] {
-	--kite9-margin: 4pt;
-	--kite9-vertical-align: center;
-	--kite9-connection-align: 50%;
-	--kite9-horizontal-align: center;
-}
-
-[k9-elem=textarea] > [k9-texture=foreground] {
+[k9-texture=foreground] {
 	fill: rgb(36, 51, 20);
 	font-family: "metropolis";
 	font-size: 50pt;
@@ -49,8 +42,8 @@
 
 [k9-elem=label] > [k9-texture=foreground]	{
   fill: black;
-	font-family: "metropolis";
-	font-size: 16pt;
+  font-family: "metropolis";
+  font-size: 16pt;
 }
 
 [k9-elem=cell] {
