--- a/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart.css
@@ -4,24 +4,19 @@
 @import url(flowchart-shapes.css);
 
 [k9-texture=flowchart-symbol] {
-	fill: #BBBBBB;
+	fill: #DDDDDD;
 	stroke: black;
 }
 
-[k9-elem=diagram] > [k9-texture] {
-	fill: white;
+[k9-texture=flowchart-symbol] text {
+	fill: black;
 }
 
-[k9-texture=foreground] > text {
+
+[k9-texture] {
   font-family: "metropolis";
   text-align: start;
   font-size: 10pt;
-  stroke: none;
-  fill:  black;	
 }
 
-[k9-elem=textarea] > [k9-texture=background],
-[k9-elem=label] > [k9-texture=background] { 
-  fill: none;
-  stroke: none;
-}
+	
