Most of risk-first working

--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/artifacts/artifacts.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/artifacts/artifacts.css
@@ -21,9 +21,8 @@
 	--kite9-min-size: 110pt 140pt;
 }
 
-[k9-texture=artifact] {
+[k9-texture=artifact] text {
   font-size: 12pt;
-  font-family: "metropolis";
   font-weight: 200;
   fill: black;
   text-align: middle;
