--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first.css
@@ -2,131 +2,16 @@
 @import url('/public/fonts/metropolis/metropolis.css');
 @import url('/public/templates/risk-first/risks/risks.css');
 @import url('/public/templates/risk-first/artifacts/artifacts.css');
-@import url('/public/templates/risk-first/actions.css');
+@import url('/public/templates/risk-first/actions/actions.css');
 @import url('/public/templates/risk-first/planner/planner.css');
 @import url('/public/templates/risk-first/site/site.css');
+@import url('/public/templates/risk-first/actions/actions.css');
+@import url('/public/templates/risk-first/labels/risk-first-labels.css');
+@import url('/public/templates/risk-first/links/risk-first-links.css');
 @import url('/public/templates/risk-first/planner/matrix.css');
-@import url('/public/templates/editor/editor.css');
 @import url('/public/templates/votes/votes.css');
+@import url('/public/templates/editor/editor.css');
 
-/* Titles, generally */
-
-[k9-elem=title] {
-	--kite9-horizontal-align: center;
-	--kite9-vertical-align: bottom;
-	--kite9-sizing: minimize;
-	--kite9-type: text;
-	font-size: 12pt;
-	font-family: "metropolis";
-	font-weight: 200;
-	fill: black;
-	text-align: middle;
-	--kite9-text-bounds-width: 110pt;
-	--kite9-padding: 0pt;
-}
-
-/* Labels */
-
-[k9-elem=label] > [k9-texture=foreground],
-[k9-elem=description]  {
-	text-align: middle;
-	fill: black;
-	font-weight: 100;
-	font-size: 12pt;
-  font-style: italic;
-}
-
-[k9-elem=container] > [k9-elem=label] [k9-texture=foreground] {
-	font-weight: 600;
-  font-size: 12pt;
-  font-style: normal;
-  font-family: metropolis;
-}
-
-[k9-elem=label] [k9-texture=foreground] {
-	fill: #333333;
-}
-
-[k9-elem=label] [k9-texture=background] {
-  fill: #EEEEEE;
-}
-
-
-[k9-elem=container] > [k9-texture=background] {
-	stroke-width: 1pt;
-}
-
-[k9-elem=label].title [k9-texture=foreground] {
-	font-size: 25pt;
-}
-
-[k9-elem=description] {
-  --kite9-usage: label;
-  --kite9-type: container;
-  --kite9-vertical-align: center;
-  --kite9-horizontal-align: center;
-  --kite9-padding: 10pt;
-  --kite9-label-placement: bottom;
-}
-
-[k9-elem=description] [k9-texture=foreground] {
-  fill: black;
-}
-
-/* Context */
-[k9-elem=context] {
-  --kite9-type: container;
-  --kite9-padding: 15pt;
-  --kite9-margin: 15pt;
-  --kite9-sizing: minimize;
-}
-
-
-/* Arrow */
-
-[k9-elem=arrow] {
-	--kite9-padding: 8pt 5pt 8pt 5pt;
-	--kite9-type: text;
-	--kite9-sizing: minimize;
-	--kite9-connections: separate;
-	--kite9-connection-align: 50%;
-	font-size: 14pt;
-	font-family: "metropolis";
-	font-weight: 500;
-	--kite9-link-inset: 3pt;
-}
-
-[k9-elem=arrow] > [k9-texture=background] {
-	fill: black;	
-	fill-opacity: 1; 
-}
-
-[k9-elem=arrow] > [k9-texture=foreground] {
-	fill: white;
-	fill-opacity: 1; 
-}
-
-[k9-elem=from],
-[k9-elem=to] {
-	--kite9-marker-reserve: 8pt;
-}
-
-[k9-elem=link] {
-	--kite9-link-minimum-length: 30pt;
-}
-
-/* Fills */
-[k9-elem=risk] [k9-texture=background],
-[k9-elem=action] [k9-texture=background] {
-	 fill: url(#risk-background);
-   stroke: black; 
-}
-
-[k9-elem=votes] .count {
+[k9-texture] {
 	font-family: metropolis;
-}
-
-/* Diagram */
-[k9-elem=diagram] {
-  --kite9-padding: 20pt;
 }
