--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks/risks.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks/risks.css
@@ -26,12 +26,26 @@
 	--kite9-min-size: 120pt 160pt;
 }
 
-[k9-elem=risk] > [k9-elem=code] {
+
+[k9-elem=title] {
+  --kite9-horizontal-align: center;
+  --kite9-vertical-align: bottom;
+  --kite9-sizing: minimize;
+  --kite9-type: text;
+  font-size: 12pt;
+  font-weight: 200;
+  fill: black;
+  text-align: middle;
+  --kite9-text-bounds-width: 110pt;
+  --kite9-padding: 0pt;
+}
+
+
+[k9-elem=code] {
 	--kite9-horizontal-align: center;
 	--kite9-vertical-align: top;
 	--kite9-sizing: minimize;
 	font-size: 22pt;
-	font-family: "metropolis";
 	font-weight: 300;
 	fill: black;
 	text-align: middle;
@@ -45,3 +59,7 @@
 	--kite9-horizontal-align: middle;
 }
 
+[k9-elem=risk][k9-texture=background] {
+   fill: url(#risk-background);
+   stroke: black; 
+}
