--- a/server/kite9-server-java/src/main/resources/static/public/templates/highlight/highlight.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/highlight/highlight.css
@@ -36,6 +36,7 @@
 	stroke: #b7c0fe;
 	stroke-opacity: .8;
 	stroke-width: 1pt;
+	stroke-dasharray: none;
 }
 
 .indicators-on [id] > [k9-highlight~=fill] {
