--- a/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
@@ -1,17 +1,8 @@
-
-[k9-elem=diagram] {
-	font-size: 50pt;
-	font-family: metropolis;
-}
-
-[k9-elem=box] {
-	--kite9-padding: 10pt;
-	--kite9-sizing: minimize;
-	--kite9-margin: 20pt;
-	--kite9-min-size: 100pt 100pt;
-	--kite9-connection-align: 50%;
-	--kite9-connection-align: 50%;
-}
+@import url(/public/templates/texture/texture-defaults.css);
+@import url(/public/templates/containers/containers-textures.css);
+@import url(/public/templates/links/links-textures.css);
+@import url(/public/templates/grid/grid-textures.css);
+@import url(/public/templates/highlight/highlight.css);
 
 [k9-elem=box] > [k9-texture=background] {
 	fill: #CCCCAA;
@@ -20,32 +11,15 @@
 	stroke-dasharray: none;
 }
 
-[k9-elem=clearbox] {
-	--kite9-padding: 10pt;
-	--kite9-sizing: maximize;
-	--kite9-margin: 20pt;
-	--kite9-min-size: 100pt 100pt;
-	--kite9-connection-align: 50%;
-}
-
-[k9-texture=foreground] {
+[k9-texture=foreground],
+[k9-texture=background] > g > text {
 	fill: rgb(36, 51, 20);
 	font-family: "metropolis";
 	font-size: 50pt;
-}
-
-/* Labels */
-
-[k9-elem=label] {
-  --kite9-padding: 10pt;
 }
 
 [k9-elem=label] > [k9-texture=foreground]	{
   fill: black;
   font-family: "metropolis";
   font-size: 16pt;
-}
-
-[k9-elem=cell] {
-	--kite9-min-size: 40pt 40pt;
 }
