--- a/server/kite9-server-java/src/main/resources/static/public/templates/designer/designer.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/designer/designer.css
@@ -15,22 +15,7 @@
 
 /* Definitions of Kite9 Elements */
 
-[k9-elem=diagram] {
-  --kite9-padding-top: 15pt;
-  --kite9-padding-right: 15pt;
-  --kite9-padding-bottom: 15pt;
-  --kite9-padding-left: 15pt;
-
-  --kite9-margin-top: 10pt;
-  --kite9-margin-right: 10pt;
-  --kite9-margin-left: 10pt;
-  --kite9-margin-bottom: 10pt;
-
-	--kite9-link-inset: 10pt;
-	--kite9-link-gutter: 10pt;
-	--kite9-type: diagram;
-	--kite9-traversal: none;
-
+[k9-elem=diagram] > [k9-texture=foreground] {
   font-family: opensans;
   font-weight: 400;
   font-size: 10pt;
