--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks/risks.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks/risks.css
@@ -56,7 +56,7 @@
 
 [k9-elem=risk] > [k9-format=image] {
 	--kite9-vertical-align: top;
-	--kite9-horizontal-align: middle;
+	--kite9-horizontal-align: center;
 }
 
 [k9-elem=risk][k9-texture=background] {
