--- a/server/kite9-server-java/src/main/resources/static/public/templates/links/links-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/links/links-textures.css
@@ -33,6 +33,7 @@
 	stroke: #CCCCCC;
 }
 
-[k9-elem=hub] > [k9-texture=foreground] {
+[k9-elem=hub][k9-texture=background] {
   fill: #FFFFFF;
+  stroke: none;
 }
