--- a/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
@@ -5,6 +5,8 @@
 @import url(/public/templates/labels/labels-textures.css);
 @import url(/public/templates/links/links-textures.css);
 @import url(/public/templates/highlight/highlight.css);
+@import url(/public/templates/editor/editor.css);
+@import url(/public/fonts/metropolis/metropolis.css);
 
 [k9-elem=box] > [k9-texture=background] {
 	fill: #CCCCAA;
