Fixed flowchart texture

--- a/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart-textures.css
@@ -4,6 +4,8 @@
 [k9-texture=flowchart-outline] > g > [k9-texture=background] {
 	fill: #DDDDDD;
 	stroke: black;
+	fill-opacity: 1;
+	stroke-opacity: 1;
 }
 
 [k9-texture=flowchart-symbol] text {
