--- a/server/kite9-server-java/src/main/resources/static/public/templates/uml/uml-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/uml/uml-textures.css
@@ -1,58 +1,13 @@
+@import url('/public/templates/basic/basic-textures.css');
 
-[k9-elem=component] > [k9-elem=label],
-[k9-elem=uml-container] > [k9-elem=label],
-[k9-elem=package] > [k9-elem=label] {
-	--kite9-padding: 0pt;
+
+[k9-texture] {
+  font-family: "metropolis";
+  text-align: start;
+  font-size: 10pt;
 }
 
-[k9-elem=use-case],
-[k9-elem=note],
-[k9-elem=component],
-[k9-elem=uml-container],
-[k9-elem=package] {
-  --kite9-padding: 10pt;
-}
-
-[k9-elem=actor] > [k9-elem=depiction] {
-  --kite9-min-size: 30pt 30pt;
-  --kite9-margin: 5pt; 
-  --kite9-padding: 0pt;  
-  fill: rgb(231, 230, 232);
-  stroke: black;
-}
-
-
-[k9-elem=interface] [k9-elem=depiction] {
-	--kite9-min-size: 20pt 20pt;
-	--kite9-margin: 5pt; 
-	--kite9-padding: 0pt;  
-  fill: rgb(231, 230, 232);
-  stroke: black;
-}
-
-[k9-elem=actor] > [k9-elem=caption],
-[k9-elem=interface] [k9-elem=caption] {
-  --kite9-margin: 0pt;
-  --kite9-padding: 0pt;	
-}
-
-[k9-elem=component] {
-  --kite9-padding-left: 25pt
-}
-
-[k9-elem=uml-container] {
-  --kite9-padding-top: 20pt;
-  --kite9-padding-right: 20pt;
-}
-
-[k9-elem=package] {
-  --kite9-padding-top: 25pt
-}
-
-[k9-elem=divider] {
-  --kite9-padding: 0pt;
-}
-
+	
 
 /**
  * Fonts and colours 
@@ -128,46 +83,4 @@
 [k9-elem=component] {
   --kite9-min-size: 50pt 40pt;
   --kite9-margin: 10pt;
-}
-
-/**
- * Class Contents
- */
-
-[k9-elem=class] {
-  --kite9-min-size: 50pt 40pt;
-  --kite9-margin: 10pt;
-  --kite9-layout: down;
-  --kite9-padding: 0pt;
-  --kite9-traversal: leaving;
-  --kite9-traversal-top: none;
-}
- 
-[k9-elem=properties],
-[k9-elem=methods] {
-  --kite9-layout: down;
-  --kite9-sizing: maximize;
-  --kite9-padding: 0pt;
-  --kite9-margin: 0pt;
-  --kite9-min-height: 20pt;
-  --kite9-traversal-top: none;
-  
-}
-
-[k9-elem=class-name],
-[k9-elem=stereotype] {
-  --kite9-vertical-align: middle;
-  --kite9-padding: 5pt;
-  --kite9-margin: 0pt;
-}
-
-[k9-elem=property],
-[k9-elem=method] {
-  --kite9-vertical-align: middle;
-  --kite9-connection-align: 50%;
-  --kite9-sizing: minimize;
-  --kite9-padding: 8pt;
-  --kite9-margin: 0pt;
-  --kite9-padding-top: 4pt;
-  --kite9-padding-bottom: 4pt;
 }
