--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
@@ -58,3 +58,33 @@
   text-align: middle;
 }
 
+
+/* Risks */
+[k9-elem=hidden],
+[k9-elem=mitigated] {
+	fill: white;
+}
+
+
+
+[k9-elem=title] {
+  font-size: 12pt;
+  font-weight: 200;
+  fill: black;
+  text-align: middle;
+}
+
+
+[k9-elem=code] {
+	font-size: 22pt;
+	font-weight: 300;
+	fill: black;
+	text-align: middle;
+}
+
+[k9-elem=risk][k9-texture=background] {
+   fill: url(#risk-background);
+   stroke: black; 
+}
+
+
