--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
@@ -65,15 +65,12 @@
 	fill: white;
 }
 
-
-
 [k9-elem=title] {
   font-size: 12pt;
   font-weight: 200;
   fill: black;
   text-align: middle;
 }
-
 
 [k9-elem=code] {
 	font-size: 22pt;
@@ -85,6 +82,12 @@
 [k9-elem=risk][k9-texture=background] {
    fill: url(#risk-background);
    stroke: black; 
+}
+
+/* Containers */
+
+[k9-elem=container][k9-texture=background] {
+	fill-opacity: 0.01;	
 }
 
 
