--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
@@ -1,4 +1,5 @@
 @import url('/public/templates/basic/basic-textures.css');
+@import url('/public/templates/votes/votes-textures.css');
 
 
 [k9-texture] {
@@ -90,4 +91,11 @@
 	fill-opacity: 0.01;	
 }
 
+/* Planner */
+
+[k9-elem=planner-cell],
+[k9-elem=planner-header] {
+  stroke: #aeaeae;
+  stroke-width: 1pt;
+}
 
