Removed extra namespace, got site examples working

--- a/server/kite9-server-java/src/main/resources/static/public/templates/editor/editor.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/editor/editor.css
@@ -7,7 +7,7 @@
  */
 @media editor {
   [k9-elem=diagram] {
-    --kite9-padding: 200pt !important;
+    --kite9-margin: 200pt !important;
   }  
 }
 
