Working on risk-first examples and admin pages

--- a/server/kite9-server-java/src/main/resources/static/public/templates/admin/admin-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/admin/admin-textures.css
@@ -1,4 +1,4 @@
-@import url('/public/templates/adl/adl.css');
+@import url('/public/templates/basic/basic-textures.css');
 @import url('/public/templates/highlight/highlight.css');
 @import url('/public/fonts/Kanit/Kanit.css');
 
@@ -16,11 +16,6 @@
 
 /* Containers */
 
-
-[k9-elem=container] {
-	--kite9-connection-align: 50%;
-	--kite9-sizing: maximize;
-}
 
 [k9-elem=container].main {
 	--kite9-margin-top: 0pt;
@@ -69,29 +64,6 @@
 	--kite9-margin: 20pt;
 }
 
-/* Entities */
-
-[k9-elem=entity] {
-	--kite9-type: container;
-	--kite9-layout: down;
-	--kite9-min-size: 190pt 280pt;
-	--kite9-sizing: minimize;
-	--kite9-margin: 10pt;
-	--kite9-padding: 15pt;
-	--kite9-connection-align: 50%;
-}
-
-[k9-elem=pill] {
-	--kite9-type: container;
-	--kite9-layout: right;
-	--kite9-min-size: 80pt 30pt;
-	--kite9-sizing: minimize;
-	--kite9-margin: 0pt;
-	--kite9-padding: 15pt;
-	--kite9-connection-align: 50%;
-	--kite9-horizontal-align: left;
-}
-
 [k9-elem=entity] > [k9-elem=back],
 [k9-elem=pill] > [k9-elem=back] {
 	fill: white;
@@ -128,7 +100,7 @@
 	--kite9-text-bounds: 300pt 240pt;
 }
 
-[k9-elem=title] {
+[k9-texture=foreground] > g > text {
 	font-size: 22pt;
 	font-weight: 500;
 	--kite9-vertical-align: top;
