--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/artifacts/artifact-elements.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/artifacts/artifact-elements.css
@@ -22,7 +22,8 @@
 }
 
 
-[k9-elem=arrow] {
+[k9-elem=arrow],
+[k9-elem=block] {
   --kite9-padding: 8pt 5pt 8pt 5pt;
   --kite9-sizing: minimize;
   --kite9-connections: separate;
@@ -32,7 +33,20 @@
   --kite9-link-inset: 3pt;
 }
 
+[k9-elem=block] > g > [k9-elem=caption] {
+	--kite9-margin: 5pt;	
+	--kite9-padding: 5pt;
+}
+
 [k9-elem=arrow] > g > [k9-elem=caption] {
 	--kite9-margin: 0pt;	
 	--kite9-padding: 0pt;
+}
+
+
+[k9-elem=description] {
+  --kite9-padding: 10pt;
+  --kite9-usage: label;
+  --kite9-text-bounds-width: 250pt;
+  --kite9-label-placement: bottom;
 }
