--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/site/site-elements.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/site/site-elements.css
@@ -123,38 +123,6 @@
 	--kite9-padding-bottom: 0pt; 
 }
 
-[k9-elem=page-title].number {
-	font-family: Metropolis; 
-	font-size: 140pt; 
-	fill: rgb(245, 62, 121); 
-	indent:0;   
-	font-weight: 600;
-	--kite9-horizontal-align: middle;
-	--kite9-vertical-align: middle; 
-}
-
-[k9-elem=page-title].principle {
-  --kite9-text-bounds-width: 720pt; 
-  font-family: Metropolis; 
-  font-size: 70pt; 
-  font-weight: 500;
-  fill: rgb(0,0,0); 
-  text-align: start;
-  --kite9-horizontal-align: left; 
-  --kite9-vertical-align: bottom;
-}
-
-[k9-elem=page-summary].principle {
-   font-family: Metropolis; font-size: 40pt; 
-   --kite9-padding: 20pt;
-   --kite9-horizontal-align: left;
-   --kite9-vertical-align: bottom;
-   fill: #61a2a1; 
-   indent: 0; 
-   font-weight: 300; 
-   font-style: italic; 
-}
-
 [k9-elem=container].principle-top {
 	--kite9-layout: grid;
 	--kite9-grid-size: 2 2;
@@ -163,18 +131,28 @@
 	stroke: #f5f5f5;
 	stroke-width: 7pt;
 	--kite9-sizing: maximize;
+	--kite9-min-width: 1200px;
+	--kite9-min-height: 675px;
 }
 
-[k9-elem=group].principle-body-left {
-	--kite9-layout: vertical;
+[k9-elem=group].principle-left-top {
+	--kite9-horizontal-sizing: minimize;
+	--kite9-vertical-sizing: minimize;
+	--kite9-layout: down;
+	--kite9-padding-top: 0;
+	--kite9-margin-top: 0pt;
+}
+
+[k9-elem=group].principle-right-top {
+	--kite9-horizontal-sizing: maximize;
+	--kite9-vertical-sizing: minimize;
+	--kite9-layout: down;
 	--kite9-padding: 0;
 	--kite9-margin: 0pt;
-	--kite9-vertical-align: bottom;
-	--kite9-horizontal-align: left;
-	--kite9-min-width: 180pt;
+	--kite9-padding-left: 30pt;
 }
 
-[k9-elem=group].principle-left {
+[k9-elem=group].principle-left-bottom {
 	--kite9-horizontal-sizing: minimize;
 	--kite9-vertical-sizing: maximize;
 	--kite9-layout: down;
@@ -182,9 +160,9 @@
 	--kite9-margin: 0pt;
 }
 
-[k9-elem=group].principle-right {
+[k9-elem=group].principle-right-bottom {
 	--kite9-horizontal-sizing: maximize;
-	--kite9-vertcical-sizing: maximize;
+	--kite9-vertical-sizing: maximize;
 	--kite9-layout: down;
 	--kite9-padding: 0;
 	--kite9-margin: 0pt;
@@ -193,9 +171,9 @@
 
 
 [k9-elem=risk-first-logo].principle {
-	--kite9-horizontal-align: middle;
+/* 	--kite9-horizontal-align: middle;
 	--kite9-vertical-align: bottom;
-	--kite9-padding: 0;
+ */	--kite9-padding: 0;
 	--kite9-margin: 0; 
 	--kite9-margin-bottom: 0;
 }
@@ -208,5 +186,43 @@
 	font-weight: 600;
 	text-align: middle;
 	--kite9-margin-top: 0;
-	--kite9-horizontal-align: middle;  
+/* 	--kite9-horizontal-align: middle;  
+ */}
+
+[k9-elem=page-title].number {
+	font-family: Metropolis; 
+	font-size: 70pt; 
+	fill: rgb(245, 62, 121); 
+	indent:0;   
+	font-weight: 600;
+/* 	--kite9-horizontal-align: middle;
+	--kite9-vertical-align: top; 
+ */    --kite9-padding-bottom: 0;
+    --kite9-margin-bottom: 0;
+}
+
+[k9-elem=page-title].principle {
+  font-family: Metropolis; 
+  font-size: 60pt; 
+  font-weight: 500;
+  fill: rgb(0,0,0); 
+  text-align: start;
+/*   --kite9-horizontal-align: left; 
+  --kite9-vertical-align: middle;
+ */  --kite9-padding-bottom: 0;
+  --kite9-margin-bottom: 0;
+  --kite9-margin-right: 30pt;
+}
+
+
+[k9-elem=page-summary].principle {
+   font-family: Metropolis; 
+   font-size: 40pt; 
+   --kite9-padding: 20pt;
+/*    --kite9-horizontal-align: left;
+   --kite9-vertical-align: middle;
+ */   fill: #61a2a1; 
+   indent: 0; 
+   font-weight: 300; 
+   font-style: italic; 
 }
