--- a/server/kite9-server-java/src/main/resources/static/public/templates/admin/admin-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/admin/admin-textures.css
@@ -8,10 +8,14 @@
 
 [k9-elem=diagram] {
 	font-weight: 600;
-	margin: 40pt;
+	margin: 0pt;
 	font-size: 15pt;
 	--kite9-layout: down;
-	--kite9-padding: 0;
+	--kite9-padding-left: 0;
+	--kite9-padding-right: 0;
+	--kite9-padding-top: 0;
+	--kite9-padding-bottom: 0;
+	
 }
 
 /* Containers */
@@ -89,8 +93,7 @@
 	--kite9-margin-left: 5pt;
 }
 
-[k9-elem=title],
-[k9-elem=description] {
+[k9-elem=caption] {
 	--kite9-type: text;
 	fill: #686868;
 	stroke: #AAAA88;
@@ -106,7 +109,7 @@
 	--kite9-vertical-align: top;
 }
 
-[k9-elem=description] {
+[k9-elem=caption].description > g > text {
 	fill:  #767676;
 	font-size: 15pt;
 	font-weight: 200;
@@ -129,6 +132,7 @@
 .grid-temporary {
 	fill: none;
 	fill-opacity: 0;
+	stroke: none;
 }
 
 
