--- a/server/kite9-server-java/src/main/resources/static/public/templates/admin/admin-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/admin/admin-textures.css
@@ -31,6 +31,10 @@
 	--kite9-margin: 0;
 }
 
+[k9-elem=container].trail > g > rect {
+	stroke: none;
+}
+ 
 [k9-elem=container].trail * {
 	--kite9-margin: 0;
 }
