Editing now working in GUI

--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
@@ -13,6 +13,11 @@
 
 /* Artifacts */
 
+[k9-texture=artifact] {
+	fill: white;
+	fill-opacity: 0.01;
+}
+
 [k9-texture=artifact] text {
   font-size: 12pt;
   font-weight: 200;
