Fixing client-side transform

--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
@@ -42,7 +42,10 @@
 [k9-elem=label-inner] {
 	stroke: none;
 	font-size: 12pt;
-	
+}
+
+[k9-elem=caption] text {
+	text-align: middle;
 }
 
 /* Arrow, Links */
