Changes required to get Communication-Risk.md images rendered

--- a/server/kite9-server-java/src/main/resources/static/public/templates/containers/containers-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/containers/containers-textures.css
@@ -10,13 +10,13 @@
 	stroke: none;
 }
 
-[k9-texture=background][k9-elem=container].solid >  * {
+[k9-texture=background][k9-elem=container].solid > g > rect {
 	stroke: black;
 	stroke-width: 1pt;
 	stroke-dasharray: none;
 }
 
-[k9-texture=background][k9-elem=container].dotted >  * {
+[k9-texture=background][k9-elem=container].dotted > g > rect {
 	stroke: black;
 	stroke-width: 1pt;
 	stroke-dasharray: 4 4;	
