--- a/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
@@ -69,7 +69,8 @@
   --kite9-link-minimum-length: 30pt;
 }
 
-/* Actions */
+/* Actions, Glyphs */
+[k9-elem=glyph][k9-texture=background] > g > rect,
 [k9-elem=action] [k9-texture=background] {
    fill: url(#risk-background);
    stroke: black; 
