--- a/server/kite9-server-java/src/main/resources/static/public/templates/tweet/tweet-elements.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/tweet/tweet-elements.css
@@ -1,16 +1,107 @@
-[k9-elem=box] {
+[k9-elem=tweet] {
 	--kite9-padding: 10pt;
 	--kite9-sizing: minimize;
 	--kite9-margin: 20pt;
 	--kite9-min-size: 100pt 100pt;
 	--kite9-connection-align: 50%;
 	--kite9-connection-align: 50%;
+	--kite9-layout: grid;
+	--kite9-grid-size: 2 2;
 }
 
-[k9-elem=clearbox] {
-	--kite9-padding: 10pt;
-	--kite9-sizing: maximize;
-	--kite9-margin: 20pt;
-	--kite9-min-size: 100pt 100pt;
-	--kite9-connection-align: 50%;
+[k9-elem=tweet] [k9-elem=avatar] {
+	--kite9-occupies-x: 0;
+	--kite9-occupies-y: 0;
 }
+
+[k9-elem=avatar] > g > image {
+	clip-path:url(#avatarClip);	
+}
+
+[k9-elem=avatar] {
+	--kite9-padding-left: 15pt;
+	--kite9-padding-right: 15pt;
+	--kite9-padding-top: 2pt;
+	--kite9-padding-bottom: 2pt;
+}
+
+[k9-elem=tweet] [k9-elem=heading] {
+	--kite9-occupies-x: 1;
+	--kite9-occupies-y: 0;
+	--kite9-layout: right;
+} 
+
+[k9-elem=displayName],
+[k9-elem=screenName],
+[k9-elem=date] {
+	--kite9-horizontal-align: left;
+	--kite9-vertical-align: top;
+	--kite9-margin: 0;
+	--kite9-padding: 0;
+}
+
+[k9-elem=screenName] {
+	--kite9-padding-left: 16pt;
+	--kite9-padding-right: 16pt;
+}
+
+[k9-elem=displayName] > g > text {
+	font-weight: 500;
+}
+
+[k9-elem=screenName] > g > text,
+[k9-elem=date] > g > text {
+	fill: rgb(83, 100, 113);
+}
+
+
+[k9-elem=tweet] [k9-elem=contents] {
+	--kite9-occupies-x: 1;
+	--kite9-occupies-y: 1;
+	--kite9-layout: down;
+} 
+
+[k9-elem=tweet] [k9-elem=footer] {
+	--kite9-occupies-x: 1;
+	--kite9-occupies-y: 2;
+	--kite9-layout: right;
+} 
+
+[k9-elem=comments],
+[k9-elem=likes],
+[k9-elem=retweets] {
+	--kite9-layout: right;
+	--kite9-horizontal-align: left;
+	--kite9-min-width: 300pt;
+}
+
+
+[k9-elem=comments] > g > [k9-elem=caption],
+[k9-elem=likes] > g > [k9-elem=caption],
+[k9-elem=retweets] > g > [k9-elem=caption] {
+	--kite9-horizontal-align: left;	
+	font-size: 43pt;
+	fill: rgb(83, 100, 113);
+	--kite9-margin: 0;
+	--kite9-padding: 0;
+	--kite9-padding-left: 50pt;
+}
+
+[k9-elem=comments] > g > [k9-elem=depiction],
+[k9-elem=likes] > g > [k9-elem=depiction],
+[k9-elem=retweets] > g > [k9-elem=depiction] {
+	transform: scale(3.3);
+	stroke-width: .5;
+	fill: rgb(83, 100, 113);
+	stroke: none;
+	--kite9-min-size: 25pt 25pt;
+	--kite9-margin: 0;
+	--kite9-padding: 0;
+	
+}
+
+[k9-elem=textarea] {
+	--kite9-horizontal-align: left;
+}
+
+
