--- a/server/kite9-server-java/src/main/resources/static/public/templates/tweet/tweet-elements.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/tweet/tweet-elements.css
@@ -5,20 +5,41 @@
 	--kite9-min-size: 100pt 100pt;
 	--kite9-connection-align: 50%;
 	--kite9-connection-align: 50%;
-	--kite9-layout: grid;
-	--kite9-grid-size: 2 2;
+	--kite9-layout: right;
 }
 
-[k9-elem=tweet] [k9-elem=avatar] {
-	--kite9-occupies-x: 0;
-	--kite9-occupies-y: 0;
+[k9-elem=mini-body],
+[k9-elem=contents] {
+	--kite9-layout: down;	
+	--kite9-sizing: minimize;
+	--kite9-min-width: 1000pt;
+	--kite9-margin: 0;
+	--kite9-padding: 0;
 }
 
+[k9-elem=heading], 
+[k9-elem=textarea],
+[k9-elem=footer] {
+	--kite9-horizontal-align: left;
+	--kite9-padding: 0;
+	--kite9-margin: 0;
+	--kite9-text-bounds-width:1000pt;
+}
+
+[k9-elem=contents] {
+	--kite9-margin-top: 10pt;
+}
+
+[k9-elem=footer] {
+	--kite9-margin-top: 30pt;
+}
+	
 [k9-elem=avatar] > g > image {
 	clip-path:url(#avatarClip);	
 }
 
 [k9-elem=avatar] {
+	--kite9-vertical-align: top;
 	--kite9-padding-left: 15pt;
 	--kite9-padding-right: 15pt;
 	--kite9-padding-top: 2pt;
@@ -26,8 +47,6 @@
 }
 
 [k9-elem=tweet] [k9-elem=heading] {
-	--kite9-occupies-x: 1;
-	--kite9-occupies-y: 0;
 	--kite9-layout: right;
 } 
 
@@ -71,8 +90,9 @@
 [k9-elem=likes],
 [k9-elem=retweets] {
 	--kite9-layout: right;
-	--kite9-horizontal-align: left;
 	--kite9-min-width: 300pt;
+		--kite9-margin: 0;
+	--kite9-padding: 0;
 }
 
 
@@ -80,28 +100,28 @@
 [k9-elem=likes] > g > [k9-elem=caption],
 [k9-elem=retweets] > g > [k9-elem=caption] {
 	--kite9-horizontal-align: left;	
-	font-size: 43pt;
+	font-size: 41pt;
 	fill: rgb(83, 100, 113);
 	--kite9-margin: 0;
 	--kite9-padding: 0;
 	--kite9-padding-left: 50pt;
+	--kite9-padding-bottom: 6pt;
 }
 
 [k9-elem=comments] > g > [k9-elem=depiction],
 [k9-elem=likes] > g > [k9-elem=depiction],
 [k9-elem=retweets] > g > [k9-elem=depiction] {
-	transform: scale(3.3);
+	--kite9-transform: rescale;
+	--kite9-type: svg;
 	stroke-width: .5;
 	fill: rgb(83, 100, 113);
 	stroke: none;
-	--kite9-min-size: 25pt 25pt;
-	--kite9-margin: 0;
-	--kite9-padding: 0;
+	--kite9-min-size: 50pt 70pt;
+	--kite9-margin: 0pt;
+	--kite9-padding: 0pt;
+	--kite9-horizontal-align: left;
 	
 }
 
-[k9-elem=textarea] {
-	--kite9-horizontal-align: left;
-}
 
 
